attempting fix for too tall on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ html {
   color: var(--color-main);
   background: var(--color-bg);
   -webkit-text-size-adjust: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 /* reset */
